--- a/SonicStore/Areas/SonicStore/Views/Cart/CartScreen.cshtml
+++ b/SonicStore/Areas/SonicStore/Views/Cart/CartScreen.cshtml
@@ -474,6 +474,8 @@
 				success: function (response) {
 					if (response.redirectUrl) {
 						window.location.href = response.redirectUrl;
+						console.log("redirect di")
+						console.log(response.redirectUrl)
 					}
 				},
 				error: function (xhr, status, error) {
